# project-tui

./: .env  .gitignore  Cargo.toml  LICENSE  bacon.toml  docker-compose.yml
.github/workflows/: rust.yml
api/: Cargo.toml
api/migrations/: 20240419095444_create_projects_table.down.sql  20240419095444_create_projects_table.up.sql
api/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
api/src/handler/: project.rs
api/src/handler/project/: create.rs  delete.rs  read.rs  update.rs
api/src/model/: language.rs  project.rs
api/src/schema/: project.rs
postgresql/: logfile  postgresql.conf  postmaster.opts  postmaster.pid
postgresql/base/1/: 1247_vm  1255  1259_vm  13444_vm  13449  13454  2600_vm  2601_vm  2606  2608_vm  2612  2615  2617_vm  2619  2658  2664  2666  2667  2673  2675  2678  2681  2682  2691  2692  2696  2704  2838  2838_vm  2840  2840_vm  3079_vm  3394  3600  3602  3603  3609  3767  pg_internal.init
postgresql/base/4/: 1247  1249_vm  1259  13449_vm  13459  2602_vm  2603_vm  2605_vm  2606_vm  2609  2609_vm  2610  2612_vm  2615_vm  2616_vm  2659  2662  2693  2753_vm  2836  2836_vm  2839  3079  3080  3085  3394_vm  3456  3456_vm
postgresql/base/5/: 1249  1255_vm  1259  13444  13448  13453  2579  2607_vm  2608  2610_vm  2618  2618_vm  2619  2619_vm  2663  2665  2674  2679  2684  2685  2690  2696  2703  2837  2840  2841  3081  3164  3455  3602_vm  3603_vm  3605  3712  3764
postgresql/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
scripts/: start_db.sh
src/: app.rs  errors.rs  events.rs  main.rs  project.rs  tui.rs  ui.rs
src/ui/: details_view.rs  edit_view.rs  test_view.rs
tui/: Cargo.toml  project.json
tui/src/: app.rs  events.rs  main.rs  tui.rs  ui.rs
tui/src/ui/: details_view.rs  edit_view.rs  test_view.rs  utils.rs
