[package]
name = "tui"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = "0.26.1"
strum = "0.26.2"
walkdir = "2.5.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"]}
chrono = { version = "0.4.38", features = ["serde"] }
async-std = "1.12.0"
